syntax = "proto3";

package fadovn_store;

message GetDistrictConditionRequest {
  optional int32 district_id = 1;
  optional string district_name = 2 ;
  optional string district_slug = 3 ;
  optional int32 city_id = 4 ;
  repeated int32 list_district_id = 6;
  optional int32 page = 10;
  optional int32 limit = 11;
}